overflow issue fixed

--- a/src/app/work/work.component.scss
+++ b/src/app/work/work.component.scss
@@ -44,6 +44,7 @@ section{
     background-color: white;
     width: 95%;
     max-width: 400px;
+    box-shadow: var(--secundary) 0px 2px 6px;
     height: 300px;
     display: flex;
     flex-direction: column;
