--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,7 @@ body{
     background-color: black;
 }
 section{
+    overflow: hidden;
     width: 100%;
     min-height: 100vh;
     padding: 2rem 0;
